--- a/appsscript.json
+++ b/appsscript.json
@@ -1,13 +1,11 @@
 {
   "timeZone": "America/New_York",
   "dependencies": {
-    "libraries": [
-      {
-        "userSymbol": "Underscore",
-        "version": "2",
-        "libraryId": "1PcEHcGVC1njZd8SfXtmgQk19djwVd2GrrW1gd7U5hNk033tzi6IUvIAV"
-      }
-    ]
+    "libraries": [{
+      "userSymbol": "Underscore",
+      "libraryId": "1PcEHcGVC1njZd8SfXtmgQk19djwVd2GrrW1gd7U5hNk033tzi6IUvIAV",
+      "version": "2"
+    }]
   },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
